# deploycore

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  jobs.py  main.py  redis.py
backend/app/hypervisors/: __init__.py  base.py  defaults.py  esxi.py  proxmox.py
backend/app/models/: __init__.py  app_asset.py  audit_log.py  base.py  deployment.py  disk_layout.py  hypervisor.py  iso_asset.py  m365_config.py  managed_host.py  notification.py  org.py  setting.py  teams_config.py  template.py  user.py  webhook.py
backend/app/schemas/: app_asset.py  audit_log.py  auth.py  dashboard.py  deployment.py  disk_layout.py  hypervisor.py  iso_asset.py  m365.py  managed_host.py  notification.py  org.py  setting.py  setup.py  teams.py  template.py  update.py  user.py  webhook.py
backend/app/security/: auth.py  crypto.py  rbac.py  sessions.py
backend/app/services/: audit.py  backup.py  deployment_service.py  graph_auth.py  iso_builder.py  iso_remaster.py  iso_upload.py  m365.py  notifications.py  remote_agent_install.ps1  remote_agent_seed.py  remote_desktop.py  remote_session.py  (+7 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_api_audit_log_scoping.py  test_api_deployments.py  test_api_hypervisors.py  test_api_iso_assets_global.py  test_api_setup.py  test_api_users_avatar.py  test_autounattend_render.py  test_crypto.py  test_hypervisor_defaults.py  test_iso_builder.py  test_rbac.py  test_state_machine.py  test_tls_certs.py  test_winrm_install_app_script.py
(+154 files in other folders)
