[project]
name = "deploycore-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    "jinja2>=3.1",
    "redis>=5.0",
    "arq>=0.26",
    "python-multipart>=0.0.9",
    "pyvmomi>=8.0",
    "proxmoxer>=2.0",
    "pywinrm>=0.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "lxml>=5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
